--- a/kitchen-api/FastTech.Kitchen/FastTech.Kitchen.Infrastructure/FastTech.Kitchen.Infrastructure.csproj
+++ b/kitchen-api/FastTech.Kitchen/FastTech.Kitchen.Infrastructure/FastTech.Kitchen.Infrastructure.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.7" />
     <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
   </ItemGroup>
 
