--- a/autenticacao-api/FastTech.Autenticacao/dockerfile-migration
+++ b/autenticacao-api/FastTech.Autenticacao/dockerfile-migration
@@ -1,25 +1,10 @@
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS migration
+ENV PATH="$PATH:/root/.dotnet/tools"
 WORKDIR /src
-
-# Copia os projetos
-COPY ["FastTech.Autenticacao.Api/FastTech.Autenticacao.Api.csproj", "FastTech.Autenticacao.Api/"]
-COPY ["FastTech.Autenticacao.Application/FastTech.Autenticacao.Application.csproj", "FastTech.Autenticacao.Application/"]
-COPY ["FastTech.Autenticacao.Domain/FastTech.Autenticacao.Domain.csproj", "FastTech.Autenticacao.Domain/"]
-COPY ["FastTech.Autenticacao.Infrastructure/FastTech.Autenticacao.Infrastructure.csproj", "FastTech.Autenticacao.Infrastructure/"]
-
-# Restore dos projetos principais
-RUN dotnet restore "FastTech.Autenticacao.Infrastructure/FastTech.Autenticacao.Infrastructure.csproj"
-RUN dotnet restore "FastTech.Autenticacao.Api/FastTech.Autenticacao.Api.csproj"
-
-# Copia todo o código
 COPY . .
-
-# Volta pra pasta do migration
-WORKDIR "/src/FastTech.Autenticacao.Infrastructure"
-
-# Instala dotnet-ef
-RUN dotnet tool install --global dotnet-ef
-ENV PATH="${PATH}:/root/.dotnet/tools"
-
-# Agora os paths estão relativos ao WORKDIR
-ENTRYPOINT ["sh", "-c", "dotnet ef database update --context AutenticacaoCommandDbContext --project FastTech.Autenticacao.Infrastructure.csproj"]
+WORKDIR "/src/FastTech.Autenticacao/FastTech.Autenticacao.Infrastructure"
+RUN dotnet restore FastTech.Autenticacao.Infrastructure.csproj \
+ && dotnet tool install --global dotnet-ef \
+ && dotnet ef database update \
+      --project FastTech.Autenticacao.Infrastructure.csproj \
+      --startup-project ../FastTech.Autenticacao.Api/FastTech.Autenticacao.Api.csproj
