--- a/kitchen-api/FastTech.Kitchen/FastTech.Kitchen.Api/FastTech.Kitchen.Api.csproj
+++ b/kitchen-api/FastTech.Kitchen/FastTech.Kitchen.Api/FastTech.Kitchen.Api.csproj
@@ -8,6 +8,14 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FastTech.Kitchen.Infrastructure\FastTech.Kitchen.Infrastructure.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="prometheus-net.AspNetCore" Version="8.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
   </ItemGroup>
