--- a/kitchen-api/FastTech.Kitchen/FastTech.Kitchen.Application/FastTech.Kitchen.Application.csproj
+++ b/kitchen-api/FastTech.Kitchen/FastTech.Kitchen.Application/FastTech.Kitchen.Application.csproj
@@ -7,6 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\FastTech.Kitchen.Domain\FastTech.Kitchen.Domain.csproj" />
   </ItemGroup>
 
